<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="8"
    android:background="#FFFFFF"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ll_sign_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?android:attr/windowBackground"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                style="?android:attr/textAppearanceMedium"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Đăng nhập" />

            <TextView
                android:id="@+id/tv_dang_ky"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Đăng Ký" />
        </LinearLayout>


        <EditText
            android:id="@+id/edt_user_name_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:drawableStart="@drawable/outline_account_circle_black_24"
            android:drawableTint="@color/colorPrimary"
            android:hint="@string/account" />

        <EditText
            android:id="@+id/edt_pass_word_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:drawableTint="@color/colorPrimary"
            android:hint="@string/password"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/sisuBtnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/sign_in"
            android:textColor="@color/colorWhite" />
    </LinearLayout>


</LinearLayout>